--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "reactstrap": "^8.6.0"
+    "reactstrap": "^8.6.0",
+    "socket.io-client": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
