--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "jwt-decode": "^3.1.2",
+    "khalti-checkout-web": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
